# JNITest

./: .gitignore  CMakeLists.txt  HelloWorldJNI.h  HelloWorldJNI.java  README.md  run.sh  sample.cpp
